exchange/app/assets/stylesheets/main.less
/* ... */
///////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////
// CSS for /account/profiles

div.account-profile-div {
    a:hover {
        cursor:pointer;
    }
}

///////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////
// CSS for /account/settings

div.account-settings {
    .control-label {
        font-size: 14px;
        padding-top: 9px;
    }

    .form-control {
        font-size: 12px;
        line-height: 1.3;
    }

    input, select {
        border-color: #3498db;
        color: #3498db;
        border-width: 1px;
    }

    .has-error .control-label,
    .has-error .form-control {
        // color: #626F8B;
        // border-color: #626F8B;
        border-color: #3498db;
        color: #3498db;
    }

    .has-success .control-label,
    .has-success .form-control {
        color: #1abc9c;
        border-color: #1abc9c;
    }

    .has-error .form-control-feedback {
        color: #3498db;
    }

    .has-success .form-control-feedback {
        color: #1abc9c;
    }

    .form-control::-webkit-input-placeholder {
        color: #3498db;
    }

    .sendSmsBtn {
        border: none;
        border-radius: 2px;
    }

    .btn-account-settings {
        font-size: 14px;
    }
    
    .right-element {
        margin-top: 10px;
    }
}

div.account-sec-settings {
    div.sec-ok {
        min-height: 60px;
        background-color: mix(@emerald, white, 20%);
        border-radius: 4px;
        padding: 8px 35px 8px 0px;
        margin: 5px 0px 20px 0px;
        i {color: @nephritis; padding: 5px;}
    }

    div.sec-warn {
        min-height: 60px;
        background-color: mix(@carrot, white, 20%);
        border-radius: 4px;
        padding: 8px 35px 8px 0px;
        margin: 5px 0px 20px 0px;
        i {color: @pumpkin; padding: 5px;}
    }

    div.content-div {
        text-align: left;
        vertical-align: middle;
        line-height: 60px; // same as div height.
    }

    div.content-div-middle {
        margin-left: -10px;
        margin-right: 10px;
        padding-left: 0px;
        padding-right: 0px;
    }

    a:hover {
        cursor:pointer;
    }

    img:hover {
        cursor:pointer;
    }
}

///////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////
// CSS for /privacy.html  and /terms.html
div.article-title {
    margin-left: auto;
    margin-right: auto;
    text-align: center;

    h3, h4 {
        text-align: center;
    }
}

div.legal {
    background-color: white;
    padding: 30px;
    p {
        color: @midnight-blue;
        font-size: 14px;
        line-height: 1.5;
        padding-bottom: 20px;
    }
}

// css for cny deposit
.card-wrapper {
    padding: 0;
}

.agent-card {
    background-color: rgba(247, 247, 250, 0.53);
    border: 1px solid black;
    text-align: center;
    margin: 15px 30px;
    padding-top: 10px;
    border-radius: 15px;
}

.agent-card ul {
    list-style: none;
    text-align: left;
    margin: 10px 0;
    padding-left: 0px;
}

.card-desc {
    position: absolute;
    left: 80px;
}

.agent-card:hover {
    box-shadow: 0px 4px 10px 4px rgba(0,0,0,.26);
}

.agent-card:active {
    transform: scale(1);
    transition: 0s;
    box-shadow: none;
}

.card-title {
    font-size: 1.3em;
}

.bank-card-sel button {
    line-height: normal;
}

.btn.btn-default.bank-card-desc {
    width: 90%;
    color: black;
}

#bank-card-caret {
    width: 10%;
}

.dropdown-menu {
    margin-top: 0px !important;
    width: 100%;
    border: 1px solid;
}

.open > .dropdown-menu {
    margin-top: 0px !important;
}

.dropdown-menu a {
    float: left;
    width: 90%;
}

.dropdown-menu .glyphicon {
    margin: 8px 15px;
    float: right;
}

.dropdown-menu .glyphicon:hover {
    color: black;
}

.modal-dialog {
    z-index: 9999;
    box-shadow: 0px 4px 10px 4px rgba(0,0,0,.26);
}

.modal-backdrop.in {
    background-color: black;
    opacity: 0.7;
}

.side-btn {
    display: inline-block;
    *display: inline;
    margin-bottom: 0;
    *margin-left: .3em;
    font-size: 14px;
    line-height: inherit;
    color: #555;
    text-align: center;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
    vertical-align: middle;
    cursor: pointer;
    background-color: #f5f5f5;
    *background-color: #e6e6e6;
    background-repeat: repeat-x;
    border: 1px solid;
    *border: 0;
    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    border-bottom-color: #b3b3b3;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
    *zoom: 1;
    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
    border-radius: 2px;
    font-weight: 500;
    outline: 0!important;
}

.modal-body .control-label {
    padding-top: 0;
}

.dropdown-menu.bank-sel a {
    width: 100%;
}

